<resources>
    //Ficheros string

    <string name="app_name">My First App</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>


    <!--TODO APP-->
    <string name="todo_title">Bienvenido, Tony</string>
    <string name="todo_category">Categorias: </string>
    <string name="todo_tasks">Tareas </string>

    <string name="todo_dialog_add_task">Añade una tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_add_task_button">Crear Tarea</string>


</resources>